--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ passlib==1.7.4
 psycopg==3.2.9
 psycopg-binary==3.2.9
 pydantic==2.11.7
+pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
 PyJWT==2.10.1
