using psotres db

--- a/alembic.ini
+++ b/alembic.ini
@@ -84,7 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql+psycopg://postgres:Ishan%402019@localhost:5432/fastapi
+sqlalchemy.url = postgresql://social_media_db_myi2_user:F8LOwSNyam2T9ZWWByRM8n7AAHPjCHsM@dpg-d2af77ripnbc739as7a0-a/social_media_db_myi2
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
